// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders correctly > should render a single button 1`] = `
<button>
  Click me
</button>
`;

exports[`renders correctly > should render the next nested children 1`] = `
<span>
  foo
</span>
`;

exports[`renders correctly > should render the next nested children with multiple elements 1`] = `
<section>
  <div>
    <span>
      bar
    </span>
  </div>
</section>
`;
